package com.aluracursos.conversormoneda.models;

public record CurrenciesPair(Currencies source, Currencies target) {}
